--- a/argocd-apps/child/prod/helm-app1.yaml
+++ b/argocd-apps/child/prod/helm-app1.yaml
@@ -12,8 +12,8 @@ spec:
     server: "https://kubernetes.default.svc"
   source:
     path: k8s/prod/helm-guestbook
-    repoURL: "https://gitlab.com/wt-854/argocd-example-apps.git"
-    targetRevision: main
+    repoURL: "https://github.com/wt-854/argocd-app-of-app-demo.git"
+    targetRevision: master
     helm:
       valueFiles:
         - values-production.yaml
