--- a/argocd-apps/child/prod/kus1.yaml
+++ b/argocd-apps/child/prod/kus1.yaml
@@ -12,8 +12,8 @@ spec:
     server: "https://kubernetes.default.svc"
   source:
     path: k8s/prod/kustomize-guestbook
-    repoURL: "https://gitlab.com/wt-854/argocd-example-apps.git"
-    targetRevision: main
+    repoURL: "https://github.com/wt-854/argocd-app-of-app-demo.git"
+    targetRevision: master
   sources: []
   project: default
   syncPolicy:
